[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Jeba Singh Emmanuel <jemmanuel@linkedin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
bit = "0.1.1"
aes="0.3.2"
openssl = "0.10.25"
rand = "0.7.2"
